export const strings = {
  en: {
    home: "Home",
    cart: "Cart",
    yourCart: "Your cart is empty.",
    addToCart: "Add to Cart",
    added: "Added",
    selectLanguage: "Select Language",
    english: "English",
    arabic: "Arabic",
  },

  ar: {
    home: "الصفحة الرئيسية",
    cart: "سلة التسوق",
    yourCart: "سلة التسوق فارغة",
    addToCart: "أضف إلى السلة",
    added: "تمت الإضافة",
    selectLanguage: "اختر اللغة",
    english: "الإنجليزية",
    arabic: "العربية",
  }
};
