...
      ) : (
        <FlatList
          data={cartItems}
          keyExtractor={item => `${item.id}`}
          renderItem={renderItem}
          contentContainerStyle={styles.listContent}
          testID="cart_list"
          accessibilityLabel="cart_list"
        />
      )}
    </SafeAreaView>
  );
};
...
